--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint-fix": "eslint --cache --cache-location .eslintcache --fix .",
     "pretest": "eslint --cache --cache-location .eslintcache .",
     "test": "nyc --reporter=html --reporter=text mocha",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "docs": "jsdoc -c .jsdocrc.json"
   },
   "repository": {
     "type": "git",
@@ -32,7 +33,7 @@
     "loglevel-plugin-prefix": "^0.8.4",
     "mathjs": "^7.2.0",
     "mysql": "^2.18.1",
-    "node-fetch": "^2.6.0",
+    "node-fetch": "^2.6.1",
     "simple-git": "^2.20.1",
     "yargs": "^15.4.1"
   },
@@ -40,7 +41,10 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "coveralls": "^3.1.0",
-    "eslint": "^7.7.0",
+    "eslint": "^7.8.1",
+    "eslint-plugin-jsdoc": "^30.4.0",
+    "eslint-plugin-markdown": "^1.0.2",
+    "jsdoc": "^3.6.5",
     "mocha": "^8.1.3",
     "nodemon": "^2.0.4",
     "nyc": "^15.1.0",
